fixed cors error on firefox

--- a/app/static/page.home.scss
+++ b/app/static/page.home.scss
@@ -33,6 +33,7 @@
                 &.signup {
                     opacity: 0;
                 }
+
                 &.confirmation {
                     opacity: 1;
 
@@ -85,7 +86,7 @@
                     }
 
                     i {
-                        transform: translateY(-1px);
+                        transform: translateY(-0.5px);
                         padding-left: 0.25rem;
                         font-size: 0.6rem;
                         opacity: 0.9;
@@ -102,10 +103,10 @@
                         display: inline-block;
                         padding: 0 0.5rem;
                         max-width: 25%;
-                        color: #ccc;
+                        color: #aaa;
 
                         &:hover {
-                            color: #aaa;
+                            color: #888;
                         }
 
                         &:first-child {
